学习了Crouton的简单创建方法。

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".SlidingToastActivity" />
-        <activity android:name=".CroutonActivity"></activity>
+        <activity
+            android:name=".CroutonActivity"
+            android:label="Crouton的使用"></activity>
     </application>
 
 </manifest>
